# swallowtail

./: .gitignore  CLAUDE.md  Frontend-Design-Plan.md  Frontend_issues.md  PLAN.md  Plan-Overview.md  Product_Lifecycle_Impl.md  Project-Overview.md  Sprint.md  TODO.md  image-evaluator-agent.md  image-gen-agent.md  phase1_frontend_todo.md  phase2_backend_todo.md  railway_deployment.md  storage-architecture.md  tiktik_instagram_integration.md  tiktok_api_setup.md  tiktok_app_descriptions.md  tiktok_content_integration_plan.md  tiktok_content_mvp_impl_plan.md  tiktok_sandbox_impl_plan.md
backend/: .env.example  BACKEND.md  Manager_Agent_Implementation_Plan.md  README.md  RESEARCH_WORKSHOP_PLAN.md  SECURITY_ISSUES.md  Task_Queue_System_Implementation_Plan.md  content_posting_api_impl.md  flow_diagram.html  pyproject.toml  railway.json  requirements.txt  run.py  run_tests.py
backend/alembic/: env.py  env_async.py
backend/alembic/versions/: 11acbb169f19_add_tiktok_posting_fields_to_tasks.py  18815335c350_add_user_table_and_instance_fk.py  1acf3a824452_add_instance_management_tables.py  add_instance_media_tables.py  (+10 more)
backend/docs/: WEBSOCKET.md  apply-rls-policies.md  crew_ai.md  crew_ai_doc.md  image_generation_flow.md  openai_image_gen.md  sprint-summary.md  storage-api-usage.md  storage-folder-structure.md  tiktok_api.md  tiktok_shop_research.md  websocket_client_example.html
backend/scripts/: get_tiktok_credentials.py  run_worker.sh  setup_instance_storage.py  setup_storage_rls.sql  setup_supabase_storage.py  test_image_generation.py  test_led_squirtle_generation.py  test_storage.sh  test_storage_and_tiktok.py  test_tiktok_posting.py
backend/src/: worker.py
backend/tests/: TESTING.md  conftest.py  test_pgbouncer_connection.py
(+198 files in other folders)
